feat: jtw add upload em massa protegido por adm e controller de adm